<resources>
    <string name="app_name">FirebaseApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_create">Create</string>
    <string name="title_read">Read</string>
    <string name="title_update">Update</string>
    <string name="title_delete">Delete</string>
    <string name="name">Digite Nombre</string>
    <string name="email">Digite correo electrónico</string>
    <string name="idcard">Digite Documento de Identidad</string>
    <string name="save">Guardar</string>
    <string name="delete">Borrar</string>
    <string name="userToDelete">Dato a borrar</string>
    <string name="userToUpdate">Usuario a actualizar</string>
    <string name="cedula">Digite Cedula</string>
</resources>
